<resources>
    <string name="app_name">IREDO Viewer</string>
    <string name="title_activity_maps">IREDO Viewer</string>
    <string name="data_loading_title">Loading</string>
    <string name="data_loading_message">Wait a moment</string>
    <string name="perm_write_cache">Persmission is needed to write map cache</string>
    <string name="tooltip_state">State time:</string>
    <string name="map_vehicles">vehicles</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="menu_title">Main menu</string>
    <string name="menu_autorefresh">Auto-refersh</string>
    <string name="menu_reloading_enabled">Reloading enabled</string>
    <string name="menu_reloading_disabled">Reloading disabled</string>
    <string name="menu_github">GitHub Home Page</string>
    <string name="perm_get_accounts">Persmission is needed to register for notifications</string>
    <string name="menu_register_notif">Dispatching notifications</string>
    <string name="menu_notif_disabled">Notifications disabled</string>
    <string name="pref_notifications_category">Notifications</string>
    <string name="pref_enable_notifications">Enable notifications</string>
    <string name="pref_enable_notifications_summ">Enable notifications from IREDO dispatching</string>
    <string name="pref_topic1">First topic</string>
    <string name="pref_topic2">Second topic</string>
    <string name="pref_topic3">Third topic</string>
    <string name="menu_settings">Settings</string>
    <string name="registered_topic">registered</string>
    <string name="pref_favorite3">3. line</string>
    <string name="pref_favorite2">2. line</string>
    <string name="pref_favorite1">1. line</string>
    <string name="pref_favorites_category">Favorit lines</string>
    <string name="registered_favorite">New favorit line</string>
    <string name="no_connection">Can\'t connect to server</string>
</resources>